--- a/KameraStreamService/templates/index.html
+++ b/KameraStreamService/templates/index.html
@@ -18,7 +18,7 @@
           </form>
       </div>
       <div class = right>
-        <h1>Hello</h1>
+        <h1> this is the current temperature: {{current_temperature}}</h1>
       </div>
   </div>
   </body>
